--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 				<div class="col-md-9">
 						<div class="block-text">
-						<h3>Insights into investing time and capital towards innovation.</h3>
+						<h3>Insights into finding and investing in potential future innovation(ideas, ventures, technologies)</h3>
 							<p>
 							Stay tuned for more...
 							</p>
